[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/mesh/character/pocong.png" type="Texture" id=1]
[ext_resource path="res://assets/mesh/character/pocong.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type spatial;
render_mode unshaded, blend_mix, depth_test_disable;
uniform sampler2D texture;
uniform vec4 base_color;

void fragment(){
//	COLOR = base_color
//    vec4 color = texture(TEXTURE, UV);
//    vec4 xray = vec4(1.0, 1.0, 1.0, 1.0);
//    color.rgb *= xray.rgb;
//    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/base_color = null

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.1, 0, -0.352686, 0 )
mesh = SubResource( 4 )

[node name="speed_change" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="speed_change" to="." method="_on_speed_change_timeout"]
